Change git push target branch from production to main

--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -14,4 +14,4 @@ jobs:
           FORK_URL: https://github.com/yubiStona/RPS-UI-forked.git
         run: |
           git remote add fork $FORK_URL
-          git push fork main:production --force
+          git push fork main:main --force
